# OpsPilot-AI

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  EXAMPLES.md  LICENSE  MANIFEST.in  PYPI_DEPLOYMENT.txt  README.md  pyproject.toml  setup.py
opspilot/: cli.py  constants.py  exceptions.py  logger.py  memory.py  memory_redis.py  state.py
opspilot/agents/: fixer.py  planner.py  remediation.py  verifier.py
opspilot/context/: __init__.py  deployment_history.py  deps.py  docker.py  env.py  logs.py  production_logs.py  project.py
opspilot/diffs/: redis.py
opspilot/graph/: engine.py  nodes.py
opspilot/tools/: __init__.py  env_tools.py  log_tools.py  pattern_analysis.py
opspilot/utils/: __init__.py  llm.py  llm_providers.py
opspilot_ai-0.1.5/opspilot/tools/: dep_tools.py
opspilot_ai-0.1.6/: setup.py
tests/: README.md  __init__.py  test_llm_providers.py  test_pattern_analysis.py  test_production_logs.py  test_remediation.py
