[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opspilot-ai"
version = "0.1.4"
description = "AI-powered production incident analysis tool using multi-agent systems"
readme = "README.md"
authors = [
    {name = "Kiran Vijaykumar Choudhari", email = "choudharikiranv2003@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Typing :: Typed",
]
keywords = [
    "ai",
    "mlops",
    "devops",
    "incident-analysis",
    "sre",
    "production-monitoring",
    "agentic-ai",
    "multi-agent",
    "llm",
    "observability",
    "incident-response",
    "automation",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
redis = [
    "redis>=4.5.0",
]
aws = [
    "boto3>=1.26.0",
]
k8s = [
    "kubernetes>=25.0.0",
]
all = [
    "redis>=4.5.0",
    "boto3>=1.26.0",
    "kubernetes>=25.0.0",
]

[project.urls]
Homepage = "https://github.com/choudharikiranv15/OpsPilot-AI"
Documentation = "https://github.com/choudharikiranv15/OpsPilot-AI#readme"
Repository = "https://github.com/choudharikiranv15/OpsPilot-AI"
"Bug Tracker" = "https://github.com/choudharikiranv15/OpsPilot-AI/issues"
Changelog = "https://github.com/choudharikiranv15/OpsPilot-AI/releases"

[project.scripts]
opspilot = "opspilot.cli:app"

[tool.setuptools]
packages = ["opspilot"]

[tool.setuptools.package-data]
opspilot = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["opspilot"]
omit = ["tests/*", "opspilot/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
